commit before merge of main dataframe creation

--- a/BUTTERFLY - Options Data Analyzer.ipynb
+++ b/BUTTERFLY - Options Data Analyzer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,10 @@
     "            if float(wing_3_price) == 0:\n",
     "                continue\n",
     "            \n",
-    "\n",
+    "        wing_1_price = round(wing_1_price,2)\n",
+    "        wing_2_price = round(wing_2_price,2)\n",
+    "        wing_3_price = round(wing_3_price,2)\n",
+    "        \n",
     "        cost =  round(wing_1_price - (2 * wing_2_price) + wing_3_price,2)\n",
     "        \n",
     "        max_profit = round((tick_data[i + 1].strike - tick_data[i].strike) - cost,2)\n",
@@ -150,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -232,102 +235,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>BUTTERFLY</th>\n",
-       "      <th>COST</th>\n",
-       "      <th>MAX_PROFIT</th>\n",
-       "      <th>MAX_LOSS</th>\n",
-       "      <th>DIFF_BETWEEN_WINGS</th>\n",
-       "      <th>PERCENT_2_MAX_PAYOFF</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>PETRH276: 1.36, PETRH261: 1.19, PETRH256:1.06</td>\n",
-       "      <td>4.000000e-02</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>4.000000e-02</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>PETRH256: 1.06, PETRH284: 0.94, PETRH247:0.85</td>\n",
-       "      <td>3.000000e-02</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>3.000000e-02</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>PETRH284: 0.96, PETRH247: 0.84, PETRH289:0.74</td>\n",
-       "      <td>2.000000e-02</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>2.000000e-02</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>PETRH289: 0.74, PETRH279: 0.67, PETRH294:0.6</td>\n",
-       "      <td>-1.110223e-16</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>-1.110223e-16</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.13</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                        BUTTERFLY          COST  MAX_PROFIT  \\\n",
-       "0  PETRH276: 1.36, PETRH261: 1.19, PETRH256:1.06   4.000000e-02        0.21   \n",
-       "1  PETRH256: 1.06, PETRH284: 0.94, PETRH247:0.85   3.000000e-02        0.22   \n",
-       "2  PETRH284: 0.96, PETRH247: 0.84, PETRH289:0.74   2.000000e-02        0.23   \n",
-       "3   PETRH289: 0.74, PETRH279: 0.67, PETRH294:0.6  -1.110223e-16        0.25   \n",
-       "\n",
-       "       MAX_LOSS  DIFF_BETWEEN_WINGS  PERCENT_2_MAX_PAYOFF  \n",
-       "0  4.000000e-02                 0.0                  0.52  \n",
-       "1  3.000000e-02                 0.0                  2.36  \n",
-       "2  2.000000e-02                 0.0                  3.29  \n",
-       "3 -1.110223e-16                 0.0                  5.13  "
+       "[]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "butterfly_offline_data_dict = butterfly_cost(this_due,0.05,True)\n",
-    "df_butterfly_offline = pd.DataFrame.from_dict(butterfly_offline_data_dict)\n",
-    "df_butterfly_offline"
+    "butterfly_offline_data_dict = butterfly_realtime(this_due,0.03,True)\n",
+    "butterfly_offline_data_dict"
    ]
   },
   {
@@ -335,11 +259,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "butterfly_data_dict = butterfly_realtime(this_due,0.05,True)\n",
-    "butterfly_data = pd.DataFrame.from_dict(butterfly_data_dict)\n",
-    "butterfly_data"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
