--- a/THL - Fly - Calendar Lines - Options Data Analyzer.ipynb
+++ b/THL - Fly - Calendar Lines - Options Data Analyzer.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 134,
    "metadata": {
     "scrolled": true
    },
@@ -109,13 +109,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>28.21</th>\n",
+       "      <td>PETRH289</td>\n",
+       "      <td>PETRI254</td>\n",
+       "      <td>1.488834</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>OTM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>28.96</th>\n",
        "      <td>PETRH243</td>\n",
        "      <td>PETRI289</td>\n",
-       "      <td>1.484807</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>0.48</td>\n",
-       "      <td>0.91</td>\n",
+       "      <td>1.381215</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.78</td>\n",
        "      <td>OTM</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -125,14 +135,16 @@
       "text/plain": [
        "       option_name_x option_name_y  thl_percent_of_strike  thl_cost  bid_x  \\\n",
        "strike                                                                       \n",
-       "28.96       PETRH243      PETRI289               1.484807      0.43   0.48   \n",
+       "28.21       PETRH289      PETRI254               1.488834      0.42   0.58   \n",
+       "28.96       PETRH243      PETRI289               1.381215      0.40   0.38   \n",
        "\n",
        "        ask_y deal_type_zone_y  \n",
        "strike                          \n",
-       "28.96    0.91              OTM  "
+       "28.21    1.00              OTM  \n",
+       "28.96    0.78              OTM  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -198,23 +210,217 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24.96</th>\n",
+       "      <td>PETRH236</td>\n",
+       "      <td>PETRI256</td>\n",
+       "      <td>5.248397</td>\n",
+       "      <td>1.31</td>\n",
+       "      <td>2.14</td>\n",
+       "      <td>3.45</td>\n",
+       "      <td>ITM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25.21</th>\n",
+       "      <td>PETRH259</td>\n",
+       "      <td>PETRI259</td>\n",
+       "      <td>1.943673</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>2.11</td>\n",
+       "      <td>2.60</td>\n",
+       "      <td>ITM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25.46</th>\n",
+       "      <td>PETRH246</td>\n",
+       "      <td>PETRI251</td>\n",
+       "      <td>3.142184</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>1.82</td>\n",
+       "      <td>2.62</td>\n",
+       "      <td>ITM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25.71</th>\n",
+       "      <td>PETRH264</td>\n",
+       "      <td>PETRI258</td>\n",
+       "      <td>2.217036</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>1.80</td>\n",
+       "      <td>2.37</td>\n",
+       "      <td>ITM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25.96</th>\n",
+       "      <td>PETRH229</td>\n",
+       "      <td>PETRI266</td>\n",
+       "      <td>2.272727</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>1.61</td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>ITM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26.21</th>\n",
+       "      <td>PETRH269</td>\n",
+       "      <td>PETRI269</td>\n",
+       "      <td>1.983976</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>1.48</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>ITM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26.46</th>\n",
+       "      <td>PETRH254</td>\n",
+       "      <td>PETRI271</td>\n",
+       "      <td>2.305367</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>1.96</td>\n",
+       "      <td>ITM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26.71</th>\n",
+       "      <td>PETRH274</td>\n",
+       "      <td>PETRI274</td>\n",
+       "      <td>1.909397</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>1.21</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>OTM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26.96</th>\n",
+       "      <td>PETRH276</td>\n",
+       "      <td>PETRI261</td>\n",
+       "      <td>1.780415</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>1.08</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>OTM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27.21</th>\n",
+       "      <td>PETRH261</td>\n",
+       "      <td>PETRI279</td>\n",
+       "      <td>1.764057</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>OTM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27.46</th>\n",
+       "      <td>PETRH256</td>\n",
+       "      <td>PETRI281</td>\n",
+       "      <td>1.675164</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>1.31</td>\n",
+       "      <td>OTM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27.71</th>\n",
+       "      <td>PETRH284</td>\n",
+       "      <td>PETRI278</td>\n",
+       "      <td>1.660051</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>1.22</td>\n",
+       "      <td>OTM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27.96</th>\n",
+       "      <td>PETRH247</td>\n",
+       "      <td>PETRI286</td>\n",
+       "      <td>1.609442</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1.12</td>\n",
+       "      <td>OTM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28.21</th>\n",
+       "      <td>PETRH289</td>\n",
+       "      <td>PETRI254</td>\n",
+       "      <td>1.488834</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>OTM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28.46</th>\n",
+       "      <td>PETRH279</td>\n",
+       "      <td>PETRI276</td>\n",
+       "      <td>1.546030</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>OTM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28.96</th>\n",
+       "      <td>PETRH243</td>\n",
+       "      <td>PETRI289</td>\n",
+       "      <td>1.381215</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>OTM</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [option_name_x, option_name_y, thl_percent_of_strike, thl_cost, bid_x, ask_y, deal_type_zone_y]\n",
-       "Index: []"
+       "       option_name_x option_name_y  thl_percent_of_strike  thl_cost  bid_x  \\\n",
+       "strike                                                                       \n",
+       "24.96       PETRH236      PETRI256               5.248397      1.31   2.14   \n",
+       "25.21       PETRH259      PETRI259               1.943673      0.49   2.11   \n",
+       "25.46       PETRH246      PETRI251               3.142184      0.80   1.82   \n",
+       "25.71       PETRH264      PETRI258               2.217036      0.57   1.80   \n",
+       "25.96       PETRH229      PETRI266               2.272727      0.59   1.61   \n",
+       "26.21       PETRH269      PETRI269               1.983976      0.52   1.48   \n",
+       "26.46       PETRH254      PETRI271               2.305367      0.61   1.35   \n",
+       "26.71       PETRH274      PETRI274               1.909397      0.51   1.21   \n",
+       "26.96       PETRH276      PETRI261               1.780415      0.48   1.08   \n",
+       "27.21       PETRH261      PETRI279               1.764057      0.48   0.96   \n",
+       "27.46       PETRH256      PETRI281               1.675164      0.46   0.85   \n",
+       "27.71       PETRH284      PETRI278               1.660051      0.46   0.76   \n",
+       "27.96       PETRH247      PETRI286               1.609442      0.45   0.67   \n",
+       "28.21       PETRH289      PETRI254               1.488834      0.42   0.58   \n",
+       "28.46       PETRH279      PETRI276               1.546030      0.44   0.50   \n",
+       "28.96       PETRH243      PETRI289               1.381215      0.40   0.38   \n",
+       "\n",
+       "        ask_y deal_type_zone_y  \n",
+       "strike                          \n",
+       "24.96    3.45              ITM  \n",
+       "25.21    2.60              ITM  \n",
+       "25.46    2.62              ITM  \n",
+       "25.71    2.37              ITM  \n",
+       "25.96    2.20              ITM  \n",
+       "26.21    2.00              ITM  \n",
+       "26.46    1.96              ITM  \n",
+       "26.71    1.72              OTM  \n",
+       "26.96    1.56              OTM  \n",
+       "27.21    1.44              OTM  \n",
+       "27.46    1.31              OTM  \n",
+       "27.71    1.22              OTM  \n",
+       "27.96    1.12              OTM  \n",
+       "28.21    1.00              OTM  \n",
+       "28.46    0.94              OTM  \n",
+       "28.96    0.78              OTM  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "good_operation_THL_next_month\n"
+    "comparison_this_month\n"
    ]
   },
   {
