--- a/RATIO - Options Data Analyzer.ipynb
+++ b/RATIO - Options Data Analyzer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -94,128 +94,114 @@
        "    <tr>\n",
        "      <th>PETRH269</th>\n",
        "      <td>26.21</td>\n",
-       "      <td>1.83</td>\n",
-       "      <td>1.85</td>\n",
-       "      <td>1.83</td>\n",
-       "      <td>-0.07</td>\n",
-       "      <td>27.29</td>\n",
+       "      <td>1.41</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>1.49</td>\n",
+       "      <td>-0.15</td>\n",
+       "      <td>26.7</td>\n",
        "      <td>ITM</td>\n",
-       "      <td>0.900899</td>\n",
+       "      <td>0.468072</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>3.003059</td>\n",
+       "      <td>2.674171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PETRH254</th>\n",
        "      <td>26.46</td>\n",
-       "      <td>1.65</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>1.69</td>\n",
-       "      <td>-0.14</td>\n",
-       "      <td>27.29</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>-0.17</td>\n",
+       "      <td>26.7</td>\n",
        "      <td>ITM</td>\n",
-       "      <td>-0.177657</td>\n",
+       "      <td>-0.169398</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.239024</td>\n",
+       "      <td>0.204511</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PETRH261</th>\n",
        "      <td>27.21</td>\n",
-       "      <td>1.21</td>\n",
-       "      <td>1.23</td>\n",
-       "      <td>1.22</td>\n",
-       "      <td>-0.16</td>\n",
-       "      <td>27.29</td>\n",
-       "      <td>ATM</td>\n",
-       "      <td>-0.155286</td>\n",
-       "      <td>True</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>1.15</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>-0.07</td>\n",
+       "      <td>26.7</td>\n",
+       "      <td>OTM</td>\n",
+       "      <td>-0.147080</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.206466</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.176892</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PETRH247</th>\n",
        "      <td>27.96</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>0.87</td>\n",
-       "      <td>0.84</td>\n",
-       "      <td>-0.12</td>\n",
-       "      <td>27.29</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>-0.09</td>\n",
+       "      <td>26.7</td>\n",
        "      <td>OTM</td>\n",
-       "      <td>-0.128170</td>\n",
+       "      <td>-0.117847</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.177928</td>\n",
+       "      <td>0.158318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PETRH289</th>\n",
        "      <td>28.21</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.76</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>-0.09</td>\n",
-       "      <td>27.29</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>-0.06</td>\n",
+       "      <td>26.7</td>\n",
        "      <td>OTM</td>\n",
-       "      <td>-0.109376</td>\n",
+       "      <td>-0.101310</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.139892</td>\n",
+       "      <td>0.132625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PETRH279</th>\n",
        "      <td>28.46</td>\n",
-       "      <td>0.66</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>-0.08</td>\n",
-       "      <td>27.29</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>-0.06</td>\n",
+       "      <td>26.7</td>\n",
        "      <td>OTM</td>\n",
-       "      <td>-0.106606</td>\n",
+       "      <td>-0.097916</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.134867</td>\n",
+       "      <td>0.130288</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PETRH294</th>\n",
        "      <td>28.71</td>\n",
-       "      <td>0.58</td>\n",
-       "      <td>0.59</td>\n",
-       "      <td>0.58</td>\n",
-       "      <td>-0.09</td>\n",
-       "      <td>27.29</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>-0.11</td>\n",
+       "      <td>26.7</td>\n",
        "      <td>OTM</td>\n",
-       "      <td>-0.094483</td>\n",
+       "      <td>-0.086387</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.124936</td>\n",
+       "      <td>0.117845</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PETRH243</th>\n",
        "      <td>28.96</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.52</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>-0.07</td>\n",
-       "      <td>27.29</td>\n",
-       "      <td>OTM</td>\n",
-       "      <td>-0.086447</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.113897</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PETRH299</th>\n",
-       "      <td>29.21</td>\n",
-       "      <td>0.44</td>\n",
+       "      <td>0.35</td>\n",
        "      <td>0.45</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>-0.08</td>\n",
-       "      <td>27.29</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>-0.04</td>\n",
+       "      <td>26.7</td>\n",
        "      <td>OTM</td>\n",
-       "      <td>-0.081365</td>\n",
+       "      <td>-0.078647</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.111006</td>\n",
+       "      <td>0.108427</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -223,29 +209,27 @@
       ],
       "text/plain": [
        "          strike   bid   ask  last_tick  ratio stock_price deal_type_zone  \\\n",
-       "PETRH269   26.21  1.83  1.85       1.83  -0.07       27.29            ITM   \n",
-       "PETRH254   26.46  1.65  1.68       1.69  -0.14       27.29            ITM   \n",
-       "PETRH261   27.21  1.21  1.23       1.22  -0.16       27.29            ATM   \n",
-       "PETRH247   27.96  0.85  0.87       0.84  -0.12       27.29            OTM   \n",
-       "PETRH289   28.21  0.75  0.76       0.75  -0.09       27.29            OTM   \n",
-       "PETRH279   28.46  0.66  0.67       0.67  -0.08       27.29            OTM   \n",
-       "PETRH294   28.71  0.58  0.59       0.58  -0.09       27.29            OTM   \n",
-       "PETRH243   28.96  0.50  0.52       0.51  -0.07       27.29            OTM   \n",
-       "PETRH299   29.21  0.44  0.45       0.43  -0.08       27.29            OTM   \n",
+       "PETRH269   26.21  1.41  1.54       1.49  -0.15        26.7            ITM   \n",
+       "PETRH254   26.46  1.32  1.45       1.32  -0.17        26.7            ITM   \n",
+       "PETRH261   27.21  0.94  1.15       1.01  -0.07        26.7            OTM   \n",
+       "PETRH247   27.96  0.50  0.69       0.67  -0.09        26.7            OTM   \n",
+       "PETRH289   28.21  0.59  0.72       0.61  -0.06        26.7            OTM   \n",
+       "PETRH279   28.46  0.20  0.59       0.55  -0.06        26.7            OTM   \n",
+       "PETRH294   28.71  0.40  0.61       0.44  -0.11        26.7            OTM   \n",
+       "PETRH243   28.96  0.35  0.45       0.40  -0.04        26.7            OTM   \n",
        "\n",
        "              Mean  above_mean  above_2x_std_dev  a2xStdDev_Price  \n",
-       "PETRH269  0.900899       False             False         3.003059  \n",
-       "PETRH254 -0.177657       False             False         0.239024  \n",
-       "PETRH261 -0.155286        True             False         0.206466  \n",
-       "PETRH247 -0.128170       False             False         0.177928  \n",
-       "PETRH289 -0.109376       False             False         0.139892  \n",
-       "PETRH279 -0.106606       False             False         0.134867  \n",
-       "PETRH294 -0.094483       False             False         0.124936  \n",
-       "PETRH243 -0.086447       False             False         0.113897  \n",
-       "PETRH299 -0.081365       False             False         0.111006  "
+       "PETRH269  0.468072       False             False         2.674171  \n",
+       "PETRH254 -0.169398        True             False         0.204511  \n",
+       "PETRH261 -0.147080       False             False         0.176892  \n",
+       "PETRH247 -0.117847       False             False         0.158318  \n",
+       "PETRH289 -0.101310       False             False         0.132625  \n",
+       "PETRH279 -0.097916       False             False         0.130288  \n",
+       "PETRH294 -0.086387        True             False         0.117845  \n",
+       "PETRH243 -0.078647       False             False         0.108427  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +250,8 @@
     "ratio_statistic_finder = ratio_statistic_finder.reset_index()\n",
     "ratio_statistic_finder = ratio_statistic_finder.pivot(index='updated_at', columns='option_name', values='ratio')\n",
     "ratio_statistic_finder = ratio_statistic_finder.dropna(axis=1)\n",
-    "ratio_statistic_finder\n",
+    "\n",
+    "ratio_statistic_finder = ratio_statistic_finder.groupby(pd.Grouper(freq='D')).mean()\n",
     "\n",
     "ratio_statistic_data = {}\n",
     "for (column, value) in ratio_statistic_finder.iteritems():\n",
@@ -292,6 +277,29 @@
     "df_options_updated = df_options_updated.drop(columns=['updated_at','StdDev','2xStdDev'])\n",
     "df_options_updated"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
